# eel

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
eel/: __init__.py  _cdefs.py  eel.py
scripts/: download_models.sh  main.py
src/: debug.c  debug.h  eel.c  eel.h  infer.c  infer.h  matmul.c  matmul.h
