[project]
name = "eel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.3",
    "safetensors>=0.5.3",
    "tokenizers>=0.21.0",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
